--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
 <body>
   <div id="root"></div>
+  <div id="modalRoot"
+    class="scale-0 flex items-center justify-center fixed left-0 top-0 transition-all h-screen w-full"></div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
 
