Added photo and review modals, and introduced usage of localStorage in order to saveNoumes into MyNoumes page

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
   <div id="root"></div>
   <div id="modalRoot"
     class="scale-0 flex items-center justify-center fixed left-0 top-0 transition-all h-screen w-full"></div>
+  <div id="photoModalRoot"
+    class="scale-0 flex items-center justify-center fixed left-0 top-0 transition-all h-screen w-full"></div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
 
